# surf

./: .gitignore  AGENTS.md  Architecture.md  Cargo.toml  PRD.md  dev-macos-gui-page-after-reload.json  dev-macos-gui-page-after-start-2.json  dev-macos-gui-page-after-start-3.json  dev-macos-gui-page-after-start.json  dev-macos-gui-page-before-reload.json  dev-macos-gui-page-snapshot.json  human.md  orchestration.md  ralph.sh  ralph_state.json
.coco/agents/: delivery-runner.md  design-architect.md  feature-developer.md  requirements-manager.md
test/scripts/: cli_json_mode.sh  cli_oneoff_basic.sh  service_jsonrpc_basic.sh  service_jsonrpc_invalid_params.sh  tui_basic_navigation.sh
workspaces/dev-cli-tui/: Cargo.toml  todo.md
workspaces/dev-cli-tui/src/: main.rs
workspaces/dev-cli-tui/surf-cli/: Cargo.toml
workspaces/dev-cli-tui/surf-cli/src/: main.rs  main.rs.bak  tui.rs  tui.rs.backup  tui.rs.backup.mod  tui.rs.backup2  tui_model.rs
workspaces/dev-cli-tui/surf-cli/tests/: integration.rs
workspaces/dev-core-scanner/: Cargo.toml  todo.md
workspaces/dev-core-scanner/src/: lib.rs  lib.rs.backup
workspaces/dev-core-scanner/surf-core/: Cargo.toml
workspaces/dev-core-scanner/surf-core/src/: lib.rs  lib.rs.backup2
workspaces/dev-core-scanner/surf-core/tests/: basic_scan.rs
workspaces/dev-macos-gui/: README.md  bug.md  dev-page-snapshot.json  index.html  package-lock.json  package.json  todo.md  vite.config.ts
workspaces/dev-macos-gui/src/: App.tsx  main.tsx
workspaces/dev-macos-gui/src-tauri/: Cargo.toml  tauri.conf.json
workspaces/dev-macos-gui/src-tauri/src/: main.rs  rpc_client.rs
workspaces/dev-macos-gui/src/components/: CentralView.tsx  MainLayout.tsx  Onboarding.tsx  Sidebar.tsx  TopBar.tsx
workspaces/dev-macos-gui/src/services/: ServiceClient.tsx
workspaces/dev-service-api/: Cargo.toml  README.md  test_service.sh  todo.md
workspaces/dev-service-api/src/: main.rs
workspaces/dev-service-api/surf-service/: Cargo.toml
workspaces/dev-service-api/surf-service/src/: main.rs  main.rs.backup
workspaces/dev-service-api/surf-service/tests/: integration.rs
workspaces/dev-service-api/tests/: integration.rs
