[package]
name = "surf-cli"
version = "0.1.0"
edition = "2021"
description = "Surf CLI & TUI frontend for disk scanning and analysis"
authors = ["Surf Team"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "surf"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17.0"
ratatui = "0.26.0"
crossterm = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
humantime = "2.1"
surf-core = { path = "../dev-core-scanner" }
