[package]
name = "surf-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.5", features = ["v4"] }

surf_core = { path = "../dev-core-scanner" }

[dev-dependencies]
tempfile = "3.10"
