[package]
name = "surf-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surf-core = { path = "../../dev-core-scanner/surf-core" }

# Used to determine the default number of threads for CLI argument
num_cpus = "1"
