[package]
name = "surf-cli"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "surf"
path = "src/main.rs"

[dependencies]
clap = "4.5"
clap_derive = "4.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surf-core = { path = "../../dev-core-scanner/surf-core" }
indicatif = "0.17"
ctrlc = "3"

# Used to determine the default number of threads for CLI argument
num_cpus = "1"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.10"
