[package]
name = "surf_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5.0", features = ["shell-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
