[package]
name = "surf-service"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = "4.5"
clap_derive = "4.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
surf-core = { path = "../../dev-core-scanner/surf-core" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3"
